# qwen-hydra

./: .gitignore  README.md  pyproject.toml
src/qwen_hydra/: __init__.py  cli.py  config.py  extract.py  heads.py  hydra.py  trunk.py
tests/: test_hydra.py
