[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen-hydra"
version = "0.1.0"
description = "Shared-trunk Qwen3-0.6B with LoRA-scale delta swapping for embed/rerank/generate"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "torch>=2.1",
    "transformers>=4.51",
    "safetensors>=0.4",
    "huggingface-hub>=0.20",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
]

[project.scripts]
qwen-hydra = "qwen_hydra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_hydra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: requires model download (deselect with '-m \"not slow\"')",
]
