[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen-hydra"
version = "0.1.0"
description = "Shared-trunk Qwen3-0.6B with LoRA-scale delta swapping for embed/rerank/generate"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"

dependencies = [
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
    "huggingface-hub>=0.30.0",
    "peft>=0.15.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-timeout>=2.2",
]

[project.scripts]
qwen-hydra = "qwen_hydra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_hydra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: requires model download (deselect with '-m \"not slow\"')",
]
